# c-http-server

./: .gdb_history  .gitignore  CMakeLists.txt  Makefile  a.out  create_response.c  create_response.h  hashmap.c  hashmap.h  http_server.c  http_server.h  main.c  mystring.h  parse_request.c  parse_request.h
.cache/clangd/index/: create_response.c.5142E1544E1682EF.idx  create_response.h.A8328A70CF729A99.idx  hashmap.c.BFED81692AF80F0C.idx  hashmap.h.C9A3B6C72E3F25C3.idx  http_server.c.6A90FB328B9F1D86.idx  http_server.h.1A0DD6C88F81B934.idx  main.c.9B9FB55096276808.idx  mystring.c.172C52C49C28E926.idx  mystring.h.DA2A4FAC5209D0B6.idx  parse_request.c.7F149367D942C080.idx  parse_request.h.0D0CF9858A220BAE.idx  static_files.c.F14F338AEF1348EF.idx  static_files.h.CF4B1D4ECC8EC849.idx
lib/: create_response.h  hashmap.h  http_server.h  mystring.h  static_files.h
src/: create_response.c  hashmap.c  http_server.c  main.c  mystring.c  static_files.c
